syntax = "proto3";

/**
 * TODO(rohan): see if we can move this to controller module
 */

package responsive.controller.internal.v1.controller.proto;

import "opentelemetry/proto/metrics/v1/metrics.proto";
import "responsive/controller/v1/controller.proto";

message PolicyState {
  enum State {
    INITIALIZING = 0;
    DIAGNOSE = 1;
    EXECUTE = 2;
  }

  string application_id = 1;
  State state = 2;
  State from_state = 3;
  int64 transition_time = 4;
  responsive.controller.v1.controller.proto.ApplicationPolicySpec policy = 5;
  responsive.controller.v1.controller.proto.ApplicationState current_state = 6;
  responsive.controller.v1.controller.proto.Action ongoing_action = 7;
  int64 last_eval_time = 8;
  repeated CompletedAction action_log = 9;
}

message CompletedAction {
  int64 completed_time = 1;
  responsive.controller.v1.controller.proto.Action action = 2;
  responsive.controller.v1.controller.proto.ActionStatus status = 3;
}

message ChangeApplicationState {
  responsive.controller.v1.controller.proto.ApplicationState target_state = 1;
}

message ApplicationId {
  string tenant = 1;
  string application = 2;
}

message PolicyOverride {
  ApplicationId application_id = 1;
  responsive.controller.v1.controller.proto.ApplicationPolicySpec policy = 2;
}